--- a/app.html
+++ b/app.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>JSMini</title>
+    <title>Mortgage Calculator</title>
     <!-- bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
@@ -21,84 +21,155 @@
 
 <body>
     <header>
-   <nav class="navbar navbar-expand-lg navbar-dark">
-       <div class="container-fluid">
+        <nav class="navbar navbar-expand-lg navbar-dark">
+            <div class="container-fluid">
 
-           <a class="navbar-brand" href="/index.html">
-            <img src="/img/bird.png" height="30" alt="dev logo"/>
-            App Name
-           </a>
+                <a class="navbar-brand" href="/index.html">
+                    <img src="/img/bird.png" height="30" alt="dev logo" />
+                    Mortgage Calculator
+                </a>
 
-           <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-               data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
-               aria-label="Toggle navigation">
-               <span class="navbar-toggler-icon"></span>
-           </button>
-           <div class="collapse navbar-collapse" id="navbarSupportedContent">
-               <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                   <li class="nav-item">
-                       <a class="nav-link" href="/index.html">Home</a>
-                   </li>
-                   <li class="nav-item">
-                       <a class="nav-link active" aria-current="page" href="/app.html">The App</a>
-                   </li>
-                   <li class="nav-item">
-                       <a class="nav-link" href="/code.html">The Code</a>
-                   </li>
-                   <li class="nav-item">
-                       <a class="nav-link" href="#">The Repository(link)</a>
-                   </li>
-                   <li class="nav-item">
-                    <a class="nav-link" href="https://abalan.netlify.app/">About</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Blog link</a>
-                </li>
-               </ul>
-           </div>
-       </div>
-   </nav>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                    aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                        <li class="nav-item">
+                            <a class="nav-link" href="/index.html">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="/app.html">The App</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/code.html">The Code</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">The Repository</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="https://abalan.netlify.app/">About</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Blog</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
     </header>
 
-    <main class="container py-3">
-<h1>APP UI GOES HERE</h1>
-<input class="form-control" id="message" placeholder="Enter a message" value="hi"
- type="text" />
- <button class="btn btn-primary my-3" id="btnSubmit" type="button">Display Message</button>
+    <main class="container-xxl py-3">
+        <div class="row">
+            <div class="col-12 col-sm-5">
+                <!-- user input and submit button -->
+                <form class="action">
+                    <div class="mb-2">
+                        <label for="loanAmount" class="form-label">Loan Amount</label>
+                        <input type="number" class="form-control" id="loanAmount" aria-describedby="loanAmount" required>
+                    </div>
+                    <div class="mb-2">
+                        <label for="termMonths" class="form-label">Term (Months)</label>
+                        <input type="number" class="form-control" id="termMonths" aria-describedby="termMonths" required>
+                    </div>
+                    <div class="mb-2">
+                        <label for="interestRate" class="form-label">Interest Rate</label>
+                        <input type="number" class="form-control" id="interestRate" aria-describedby="interestRate" required>
+                    </div>
+                    <div class="text-end">
+                    <button type="button" class="btn btn-primary mt-2" onclick="getValues()">
+                        Calculate
+                      </button>
+                    </div>
+                </form>
+            </div>
+            <div class="col-12 col-sm-7 mt-3">
+                <!-- monthly payment and totals -->
+                <div class="text-center"><h5>Your Monthly Payment</h5></div>
+                <div class="text-center"><h5 id="monthlyPayDisplay">
+                    <!-- JS monthly payment amount -->
+                </h5></div>
+                <div class="row ms-5">
+                    <div class="col-6 text-start">
+                        <h6 class="my-4">Total Principal</h6>
+                        <h6 class="mb-4">Total Interest</h6>
+                        <h6 class="mb-4">Total Cost</h6>
+                    </div>
+                    <div class="col-6 text-center">
+                        <!-- JS total calcs -->
+                        <h6 class="my-4" id="totalPrincipal">...</h6>
+                        <h6 class="mb-4" id="totalInterest">...</h6>
+                        <h6 class="mb-4" id="totalCost">...</h6>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- table -->
+        <table class="table table-striped table-hover mt-4">
+            <thead>
+              <tr>
+                <th scope="col">Month</th>
+                <th scope="col">Payment</th>
+                <th scope="col">Principal</th>
+                <th scope="col">Interest</th>
+                <th scope="col">Total Interest</th>
+                <th scope="col">Balance</th>
+              </tr>
+            </thead>
+            <tbody id="calculations-table">
+            <!-- calculations go here -->
+            </tbody>
+          </table>
     </main>
 
-    <footer class="footer container-fluid py-3 bg-warning text-light text-center">
-<div class="container">
-    <div class="row row-cols-1 row-cols-lg-3 align-items-center gy-2">
-        <div class="col text-lg-start">
-            &copy; 2023 Anya Balan
+    <footer class="footer container-fluid py-1 text-center">
+        <div class="container">
+            <div class="row row-cols-lg-3 gy-2">
+                <div class="col text-start pt-1">
+                    &copy; 2023
+                </div>
+                <div class="col pt-1">
+                    <img src="/img/alan(4).png" height="25" />
+                </div>
+                <div class="col text-end">
+                    <a href="#"><i class=" socialicons bi bi-github"></i></a>
+                    <a href="#"><i class=" socialicons bi bi-linkedin"></i></a>
+                    <a href="mailto:abalan0326@gmail.com"><i class=" socialicons bi bi-envelope"></i></a>
+                </div>
+            </div>
         </div>
-        <div class="col">
-            <img src="/img/alan(4).png" height="25"/>
-        </div>
-        <div class="col text-lg-end">
-            <a href="#"><i class=" socialicons bi bi-github"></i></a>
-            <a href="#"><i class=" socialicons bi bi-linkedin"></i></a>
-            <a href="#"><i class=" socialicons bi bi-twitter"></i></a>
-            <a href="mailto:abalan0326@gmail.com"><i class=" socialicons bi bi-envelope"></i></a>
-        </div>
-    </div>
-</div>
     </footer>
+
+    <template id="dropdown-template">
+        <li><a class="dropdown-item" onclick="filterEvents(this)"></a></li>
+</template>
+
+<template id="table-row-template">
+    <tr>
+        <td data-id="month"></td>
+        <td data-id="payment"></td>
+        <td data-id="principal"></td>
+        <td data-id="interest"></td>
+        <td data-id="totalInterest"></td>
+        <td data-id="balance"></td>
+      </tr>
+    </template>
+
     <!-- bootstrapJS link -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
         crossorigin="anonymous"></script>
 
-        <!--sweet alert2 popup  -->
-        <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <!--sweet alert2 popup  -->
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
-        <!-- custom JS -->
-        <script src="/js/site.js"></script>
+    <!-- custom JS -->
+    <script src="/js/site.js"></script>
 
-        <script>
-            document.getElementById('btnSubmit').addEventListener("click", displayMessage);
-        </script>
+    <script>
+        document.getElementById('btnSubmit').addEventListener("click", displayMessage);
+    </script>
 </body>
 
 </html>
