--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     <main class="container py-5">
         <div class="row row-cols-1 gy-5">
             <div class="col col-lg-6 order-lg-last d-flex justify-content align-content-center">
-                <img src="/img/movielist.png" class="img-fluid app-logo p-3">
+                <img src="/img/mortgage.png" class="img-fluid app-logo p-3">
             </div>
             <div class="col col-lg-6 text-center">
                 <h1 class="display-5">Mortgage Calculator</h1>
