--- a/code.html
+++ b/code.html
@@ -264,8 +264,8 @@
                     
                 </div>
                 <div class="col text-end">
-                    <a href="#"><i class=" socialIcons bi bi-github"></i></a>
-                    <a href="#"><i class=" socialIcons bi bi-linkedin"></i></a>
+                    <a href="https://github.com/A-Balan/MortgageCalc"><i class=" socialIcons bi bi-github"></i></a>
+                    <a href="https://www.linkedin.com/in/anya-balan-37674a25a/"><i class=" socialIcons bi bi-linkedin"></i></a>
                     <a><i class=" socialIcons bi bi-envelope" onclick="showClipboardMessage()"></i></a>
                 </div>
             </div>
