--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                             <a class="nav-link" href="https://abalan.netlify.app/">About</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link"  href="https://intheweedsblog-production.up.railway.app/">Blog</a>
+                            <a class="nav-link"  href=https://intheweedsblog-production.up.railway.app/>Blog</a>
                         </li>
                     </ul>
                 </div>
